--- a/basket.html
+++ b/basket.html
@@ -214,7 +214,7 @@
   <div class="w-full mt-6">
     <h1 class="text-[32px] font-medium mb-[30px] tracking-[-0.64px]">Корзина</h1>
 
-    <div class="w-full grid grid-cols-12 gap-[138px]">
+    <div class="w-full grid grid-cols-12 gap-[138px] max-[1600px]:gap-[50px] max-[1600px]:flex max-[1600px]:flex-col">
       <div class="col-span-8">
         <div class="flex-js-c gap-6 pb-5 border-b">
           <label class="def-checkbox flex-js-c">
@@ -233,7 +233,8 @@
         </div>
 
         <div class="w-full">
-          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b">
+          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b max-[767px]:pb-[50px] max-[767px]:relative
+          ">
             <div class="col-span-3">
               <div class="w-full flex-js-s gap-1">
                 <label class="def-checkbox flex-js-c">
@@ -241,7 +242,7 @@
                   <span class="mr-2"></span>
                 </label>
 
-                <div class="w-[116px] h-[96px] flex-jc-c border rounded-[4px]">
+                <div class="w-[116px] min-w-[116px] h-[96px] flex-jc-c border rounded-[4px]">
                   <img src="img/products/product2.png" alt="product image" class="w-[70%]">
                 </div>
               </div>
@@ -260,7 +261,7 @@
             </div>
 
 
-            <div class="col-span-4">
+            <div class="col-span-4 max-[767px]:absolute max-[767px]:left-[33px] max-[767px]:bottom-[14px]">
               <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
               <div class="flex-js-c gap-2">
                 <h4 class="text-[#CF301B] line-through">300 ₽</h4>
@@ -268,7 +269,7 @@
               </div>
             </div>
 
-            <div class="col-span-2 flex-je-s">
+            <div class="col-span-2 flex-je-s max-[767px]:absolute max-[767px]:right-[15px] max-[767px]:bottom-[14px]">
               <div class="flex-jsb-c gap-2">
                 <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   -
@@ -281,7 +282,7 @@
             </div>
 
           </div>
-          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b">
+          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b max-[767px]:relative max-[767px]:pb-[50px]">
             <div class="col-span-3">
               <div class="w-full flex-js-s gap-1">
                 <label class="def-checkbox flex-js-c">
@@ -308,7 +309,7 @@
             </div>
 
 
-            <div class="col-span-4">
+            <div class="col-span-4 max-[767px]:absolute max-[767px]:left-[33px] max-[767px]:bottom-[14px]">
               <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
               <div class="flex-js-c gap-2">
                 <h4 class="text-[#CF301B] line-through">300 ₽</h4>
@@ -316,7 +317,7 @@
               </div>
             </div>
 
-            <div class="col-span-2 flex-je-s">
+            <div class="col-span-2 flex-je-s max-[767px]:absolute max-[767px]:right-[15px] max-[767px]:bottom-[14px]">
               <div class="flex-jsb-c gap-2">
                 <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   -
