--- a/check-offer.html
+++ b/check-offer.html
@@ -309,7 +309,7 @@
             </label>
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Индекс*</span>
-              <input type="text" class="w-full max-w-[252px] pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите индекс">
+              <input type="text" class="w-full max-w-[252px] max-[767px]:max-w-[100%] pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите индекс">
             </label>
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Улица*</span>
@@ -381,30 +381,23 @@
             <span class="block text-[#323232] mb-1">Комментарии к заказу</span>
             <textarea type="text" class="w-full pl-2 rounded-[8px] border border-[#6E6E6E40] resize-none h-[162px]" placeholder="Введите имя"></textarea>
           </label>
-
-
-
-
-
-
-
         </form>
 
 
       </div>
 
       <div class="col-span-5">
-        <div class="w-full bg-[#F4F4F4] rounded-[24px] p-10 sticky top-4">
+        <div class="w-full bg-[#F4F4F4] rounded-[24px] p-10 sticky top-4 max-[767px]:p-[20px]">
           <h3 class="text-[#212121] text-[24px] font-semibold mb-6">Итоговый заказ</h3>
 
 
-          <div class="w-full pb-4 border-b">
-            <div class="w-full gap-2 flex-jsb-s mb-3">
+          <div class="w-full pb-4 border-b max-[767px]:border-none">
+            <div class="w-full gap-2 flex-jsb-s mb-3 max-[767px]:pb-[50px] max-[767px]:relative max-[767px]:border-b max-[767px]:border-[rgba(110,110,110,0.25)]">
               <div class="w-full flex-js-s gap-4">
-                <h3 class="text-[18px] w-full max-w-[238px]">
+                <h3 class="text-[18px] w-full max-w-[238px] max-[767px]:text-[16px]">
                   Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр
                 </h3>
-                <div class="flex-jsb-c gap-2">
+                <div class="flex-jsb-c gap-2 max-[767px]:absolute max-[767px]:bottom-[10px] max-[767px]:left-[0]">
                   <button class="w-8 h-8 bg-white rounded-[8px] flex-jc-c">
                     -
                   </button>
@@ -418,12 +411,12 @@
               <h5 class="w-[115px] text-[#6E6E6E]">350 руб</h5>
             </div>
 
-            <div class="w-full gap-2 flex-jsb-s">
+            <div class="w-full gap-2 flex-jsb-s mb-3 max-[767px]:pb-[50px] max-[767px]:relative max-[767px]:border-b max-[767px]:border-[rgba(110,110,110,0.25)]">
               <div class="w-full flex-js-s gap-4">
-                <h3 class="text-[18px] w-full max-w-[238px]">
+                <h3 class="text-[18px] w-full max-w-[238px] max-[767px]:text-[16px]">
                   Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр
                 </h3>
-                <div class="flex-jsb-c gap-2">
+                <div class="flex-jsb-c gap-2 max-[767px]:absolute max-[767px]:bottom-[10px] max-[767px]:left-[0]">
                   <button class="w-8 h-8 bg-white rounded-[8px] flex-jc-c">
                     -
                   </button>
@@ -439,7 +432,7 @@
           </div>
 
 
-          <ul class="w-full border-b pb-4 mt-4">
+          <ul class="w-full border-b pb-4 mt-4 max-[767px]:mt-[0]">
             <li class="w-fill flex-jsb-c">
               <span class="">Сумма товаров:</span>
               <span class="text-[#6E6E6E]">700 руб</span>
